# StyleNAT

./: README.md  main.py  pyproject.toml
conf/runs/: ffhq_256.yaml
src/: evaluate.py  sd_loss.py  train.py
utils/: fid_score.py
