[project]
name = "stylenat"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "dill>=0.4.1",
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "imageio-ffmpeg>=0.6.0",
    "joblib>=1.5.3",
    "lmdb>=1.8.1",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "timm>=1.0.25",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
    "natten==0.17.5+torch260cu126",
    "nvidia-cudnn-cu12>=9.20.0.48",
    "nvidia-cusparselt-cu12>=0.8.1",
    "nvidia-nccl-cu12>=2.29.7",
    "lpips<=0.1.4",
    "kornia<=0.8.2",
    "pytorch-msssim<=1.0.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
natten = [{ index = "natten-whl" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "natten-whl"
url = "https://whl.natten.org"
explicit = true
format = "flat"
